<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eiffel_2_change"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/topic_register"
        android:layout_width="wrap_content"
        android:layout_height="103dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/topic_register"
        android:textColor="@color/topic_color"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/tint"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/register_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_color"
        android:textColorLink="@color/hint_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/regiser_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_register"
        android:background="@drawable/border_text_box"/>

    <EditText
        android:id="@+id/register_conform_password"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="14dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/border_text_box"
        android:backgroundTint="@color/tint"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/register_conform_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regiser_password" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:background="@color/green"
        android:onClick="onClickCreate"
        android:text="@string/button_register"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_conform_password" />

    <Button
        android:id="@+id/registered_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/negative_green"
        android:onClick="alreadyClick"
        android:text="@string/no_reg"
        android:textColor="@color/green_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regiser_password"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_text_box"
        android:backgroundTint="@color/tint"
        android:ems="10"
        android:hint="@string/register_new_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_conform_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <ProgressBar
        android:id="@+id/progressBarReg"
        style="?android:attr/progressBarStyle"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateDuration="9000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/registered_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_button" />
</android.support.constraint.ConstraintLayout>