<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eiffel_2_change"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/topic_register"
        android:layout_width="wrap_content"
        android:layout_height="103dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/signin_topic"
        android:textColor="@color/topic_color"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"

        android:backgroundTint="@color/tint"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_color"
        android:textColorLink="@color/hint_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_register"
        android:background="@drawable/border_text_box"/>

    <EditText
        android:id="@+id/register_conform_password"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="14dp"
        android:background="@drawable/border_text_box"
        android:backgroundTint="@color/tint"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:background="@color/green"
        android:onClick="onClickLogin"
        android:text="@string/button_login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_conform_password" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/negative_green"
        android:onClick="onRegClick"
        android:text="@string/button_newAccount"
        android:textColor="@color/green_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="66dp"
        android:layout_height="59dp"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateDuration="25"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/reg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</android.support.constraint.ConstraintLayout>